--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="forgot_password_title">Forgot Password</string>
 
     <string name="menu_profile">Profile</string>
-    <string name="menu_love_app">Love Zpp</string>
+    <string name="menu_love_app">Refer and Earn</string>
     <string name="menu_important_link">Important Link</string>
     <string name="menu_log_out">Logout</string>
     <string name="menu_change_password">Change Password</string>
@@ -47,4 +47,13 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string name="enter_password">Enter old password</string>
+    <string name="enter_new_password">Enter new password</string>
+    <string name="confirm_new_password">Confirm new password</string>
+
+    <string name="we_value">We value community and friendship</string>
+    <string name="refer_second_passage">Tell your friends to check our Barrister app on their smart phone, And tell them to apply your Referral code while creating account.When credit score
+    reach up to 10, both will get free subscription for 1 year.</string>
+
 </resources>
