--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
 
     <string name="menu_profile">Profile</string>
     <string name="menu_love_app">Refer and Earn</string>
-    <string name="menu_important_link">Important Link</string>
+    <string name="menu_important_link">Important Websites</string>
     <string name="menu_log_out">Logout</string>
     <string name="menu_change_password">Change Password</string>
     <string name="menu_contact_us">Contact Us</string>
