Finalize the theme

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,8 @@
 
     <string name="logo">B</string>
     <string name="app_title_bold">BARRISTER</string>
-    <string name="your_online_diary">YOUR ONLINE DIARY</string>
-    <string name="your_online_diary_small">Your online diary</string>
+    <string name="your_online_diary">YOUR DIARY ALWAYS WITH YOU</string>
+    <string name="your_online_diary_small">YOUR DIARY ALWAYS WITH YOU</string>
 
     <string name="create_account">Create Account</string>
     <string name="sign_in">Sign in</string>
