--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,8 +60,8 @@
     <string name="confirm_new_password">Confirm new password</string>
 
     <string name="we_value">We value community and friendship</string>
-    <string name="refer_second_passage">Tell your friends to check our Barrister app on their smart phone, And tell them to apply your Referral code while creating account.When credit score
-    reach up to 10, both will get free subscription for 1 year.</string>
+    <string name="refer_second_passage">Tell your friends to check our Barrister app on their smart phone, And tell them to apply your Referral code while creating account.You both will get one credit,
+    when credit score reach up to 50, both will get surprise gift from us.</string>
 
 
 </resources>
